--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Manrope&display=swap");
 :root {
   --border: 2px;
   --border-radius: 2px;
@@ -22,10 +21,13 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-size: 100%;
 }
 
+
+@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
 #__next {
   height: 100vh;
   width: 100vw;
@@ -33,6 +35,7 @@ body {
   background-color: var(--body-background);
   overflow-y: auto;
   font-family: 'Manrope', sans-serif;
+  
 }
 
 a {
@@ -40,75 +43,71 @@ a {
   text-decoration: none;
 }
 
-.max-width {
+.max-width{
   width: 100%;
 }
 
-.max-height {
+.max-height{
   height: 100%;
 }
 
-.container, .big-container {
+.container{
   height: 100%;
   width: 100%;
 }
 
-.big-container {
-  max-width: var(--page-max-width);
+.big-container{
+  @extend .container;
+  max-width: var(--page-max-width)
 }
 
-.flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
+
+.flex{
   display: flex;
 }
-
-.center-children {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+.center-children{
+  align-items: center;
+  justify-content: center;
 }
 
-.align-center {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+.align-center{
+  align-items: center;
 }
 
-.justify-center {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+.justify-center{
+  justify-content: center;
 }
 
-.flex-left {
+.flex-left{
   margin-right: auto;
 }
 
-.flex-center {
+.flex-center{
   margin-left: auto;
   margin-right: auto;
 }
 
-.flex-right {
+.flex-right{
   margin-left: auto;
 }
 
-.hidden-overflow {
+.hidden-overflow{
   overflow: hidden;
 }
 
-.blue {
+
+///////////////////////////////////////////////////////////////////////////
+
+.blue{
   background-color: blue;
 }
-
-.green {
+.green{
   background-color: green;
 }
 
-.purple {
+.purple{
   background-color: purple;
 }
+
+
+
