--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,11 +3,12 @@
   --border-radius: 2px;
   --margin: 5px;
   --padding: 5px;
+  --text-color: white;
   --theme-color: #202030;
   --accent-color: #bb245c;
   --body-background: white;
   --body-neutral-dark: black;
-  --body-neutral-light: white;
+  --body-neutral-light: #202030;
   --page-max-width: 1200px;
   --animation-duration: 0.5s;
 }
@@ -35,7 +36,7 @@ body {
   background-color: var(--body-background);
   overflow-y: auto;
   font-family: 'Manrope', sans-serif;
-  
+  color: var(--text-color)
 }
 
 a {
