--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,11 +4,12 @@
   --border-radius: 2px;
   --margin: 5px;
   --padding: 5px;
+  --text-color: white;
   --theme-color: #202030;
   --accent-color: #bb245c;
   --body-background: white;
   --body-neutral-dark: black;
-  --body-neutral-light: white;
+  --body-neutral-light: #202030;
   --page-max-width: 1200px;
   --animation-duration: 0.5s;
 }
@@ -33,6 +34,7 @@ body {
   background-color: var(--body-background);
   overflow-y: auto;
   font-family: 'Manrope', sans-serif;
+  color: var(--text-color);
 }
 
 a {
