--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,7 @@
 
 html,
 body {
+  height: 100vh;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -28,7 +29,7 @@ body {
 }
 
 #__next {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   font-size: 1em;
   background-color: var(--body-background);
