--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -20,6 +20,7 @@
 
 html,
 body {
+  height: 100vh;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -30,7 +31,7 @@ body {
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
 #__next {
-  height: 100vh;
+  height: 100%;
   width: 100vw;
   font-size: 1em;
   background-color: var(--body-background);
