--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -16,23 +16,26 @@
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+  margin: 0; padding: 0;
 }
 
-html,
-body {
+
+html{
   height: 100vh;
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-size: 100%;
+  width: 100vw;
 }
 
+body {
+  font-size: 100%;
+  height: 100%;
+  width: 100%;
+}
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
+
 #__next {
   height: 100%;
-  width: 100vw;
+  width: 100%;
   font-size: 1em;
   background-color: var(--body-background);
   overflow-y: auto;
