--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -29,6 +29,7 @@ body {
   font-size: 100%;
   height: 100%;
   width: 100%;
+  border: 2px solid blue;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
