--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,6 +39,7 @@ body {
   font-size: 1em;
   background-color: var(--body-background);
   overflow-y: auto;
+  overflow: hidden;
   font-family: 'Manrope', sans-serif;
   color: var(--text-color);
 }
