--- a/component/Layout/NavBar/NavTop/style.module.scss
+++ b/component/Layout/NavBar/NavTop/style.module.scss
@@ -1,7 +1,7 @@
 
 .navTop{
     --nav-bottom-line: 4px;
-    border-bottom: var(--nav-bottom-line) solid var(--accent-color);
+    border-bottom: var(--nav-bottom-line) solid var(--theme-color);
     & > div{
         padding: 0 calc(var(--padding)*5)
     }
