--- a/component/Layout/NavBar/style.module.css
+++ b/component/Layout/NavBar/style.module.css
@@ -1,4 +1,9 @@
 .navigation {
+  --burger-height: 15px;
+  --burger-width: 30px;
+  --bar-height: 1.8px;
+  --burger-color: var(--text-color-dark);
+  --burger-margin: 7px;
   --navigation-height: 50px;
   position: -webkit-sticky;
   position: sticky;
