--- a/component/Layout/NavBar/NavSide/style.module.css
+++ b/component/Layout/NavBar/NavSide/style.module.css
@@ -1,1 +1,170 @@
-/* No CSS */
+.sideBar {
+  background-color: var(--theme-color);
+  width: min(25em, 85vw);
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
+  position: absolute;
+  overflow-y: auto;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  -webkit-transition: -webkit-transform var(--animation-duration) ease-in-out;
+  transition: -webkit-transform var(--animation-duration) ease-in-out;
+  transition: transform var(--animation-duration) ease-in-out;
+  transition: transform var(--animation-duration) ease-in-out, -webkit-transform var(--animation-duration) ease-in-out;
+}
+
+.sideBar.open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.871);
+  pointer-events: none;
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  -webkit-transition: opacity var(--animation-duration) ease-in-out;
+  transition: opacity var(--animation-duration) ease-in-out;
+}
+
+.overlay.open {
+  opacity: 1;
+  pointer-events: auto;
+}
+
+.headerSection {
+  color: var(--text-color-light);
+  height: var(--navigation-height);
+  font-size: var(--large-font-size);
+  padding: var(--padding);
+  position: relative;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  border-bottom: var(--thin-border) solid var(--text-color-light);
+}
+
+.croxSection, .backArrow {
+  width: var(--burger-width);
+  height: 100%;
+  padding: var(--padding);
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  position: absolute;
+  right: 0;
+}
+
+.backArrow {
+  --arrow-size: 20%;
+  --arrow-thickness: 1px;
+  color: var(--text-color-light);
+  left: 0;
+}
+
+.backArrow::after {
+  content: '';
+  padding: 3px;
+  position: absolute;
+  display: inline-block;
+  padding: var(--arrow-size);
+  -webkit-transform: rotateZ(135deg);
+          transform: rotateZ(135deg);
+  right: calc(var(--padding) + 5px);
+  border: solid var(--text-color-light);
+  border-width: 0 var(--arrow-thickness) var(--arrow-thickness) 0;
+}
+
+.burger {
+  width: 100%;
+  height: var(--bar-height);
+  position: relative;
+}
+
+.burger::after, .burger::before {
+  content: "";
+  background-color: var(--text-color-light);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  -webkit-transition: -webkit-transform 0.3s ease-in-out;
+  transition: -webkit-transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
+  transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+}
+
+.burger.open::before {
+  -webkit-transform: rotateZ(45deg);
+          transform: rotateZ(45deg);
+  -webkit-transition-delay: calc(var(--animation-duration));
+          transition-delay: calc(var(--animation-duration));
+}
+
+.burger.open::after {
+  -webkit-transform: rotateZ(-45deg);
+          transform: rotateZ(-45deg);
+  -webkit-transition-delay: calc(var(--animation-duration));
+          transition-delay: calc(var(--animation-duration));
+}
+
+/**********************************Side_Link**************************/
+.linkSection {
+  --arrow-size: 5px;
+  --arrow-thickness: 1px;
+  padding: var(--padding);
+  background-color: #0f0f13;
+  margin-top: var(--large-padding);
+}
+
+.linkContainer {
+  position: relative;
+  padding: var(--padding);
+  margin-top: var(--large-margin);
+  color: var(--text-color-light);
+  height: var(--navigation-height);
+  border-bottom: var(--thin-border) solid var(--secondary-accent-color);
+}
+
+.linkContainer::after {
+  content: '';
+  padding: 3px;
+  position: absolute;
+  display: inline-block;
+  width: var(--arrow-size);
+  height: var(--arrow-size);
+  -webkit-transform: rotateZ(-45deg);
+          transform: rotateZ(-45deg);
+  right: calc(var(--padding) + 5px);
+  border: solid var(--text-color-light);
+  border-width: 0 var(--arrow-thickness) var(--arrow-thickness) 0;
+}
+
+/**********************************Side_Link***************************/
+/**********************************__Footer__**************************/
+.footer {
+  padding: var(--padding);
+  color: var(--accent-color);
+  font-size: var(--medium-font-size);
+  margin-top: var(--larger-margin);
+}
+
+.footer ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.footer li {
+  display: inline-block;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-right: var(--large-margin);
+}
+
+/**********************************__Footer__**************************/
