I implemented transition animatioins and the links logic is fully functionnal

--- a/component/Layout/NavBar/NavSide/style.module.css
+++ b/component/Layout/NavBar/NavSide/style.module.css
@@ -37,6 +37,11 @@
   pointer-events: auto;
 }
 
+.navigation {
+  position: absolute;
+  background-color: var(--theme-color);
+}
+
 .headerSection {
   color: var(--text-color-light);
   height: var(--navigation-height);
