--- a/component/Layout/NavBar/style.module.css
+++ b/component/Layout/NavBar/style.module.css
@@ -7,6 +7,7 @@
   --navigation-height: 50px;
   position: -webkit-sticky;
   position: sticky;
+  z-index: 2;
   top: 0;
   left: 0;
   height: var(--navigation-height);
