--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,6 +20,8 @@
   --large-font-size: 1.2em;
   --medium-font-size: 0.8em;
   --animation-duration: 0.5s;
+  --fast-animation-duration: 0.1s;
+  --box-gap: 10px;
 }
 
 * {
@@ -54,6 +56,14 @@ h6 {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+button {
+  border: none;
+  background-color: transparent;
+  font-family: inherit;
+  padding: 0;
+  cursor: pointer;
 }
 
 #__next {
