This is my first commit

--- a/component/Layout/NavBar/style.module.scss
+++ b/component/Layout/NavBar/style.module.scss
@@ -15,3 +15,9 @@
     height: var(--navigation-height);
     background-color: var(--body-neutral-light);
 }
+.annoncement{
+    background-color: var(--theme-color);
+    color: var(--text-color-light);
+    text-align: center;
+    font-size: 0.8em;
+}
