--- a/component/ProductCard/style.module.css
+++ b/component/ProductCard/style.module.css
@@ -1,14 +1,5 @@
 .cardsContainer1 {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
 .cardsContainer2 {
@@ -20,10 +11,10 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: calc(var(--box-gap)/2);
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin: calc(var(--box-gap)/2);
 }
 
 .cards {
@@ -64,23 +55,30 @@
 /****************************description**************************************/
 .description {
   height: calc(100% - var(--image-percentage));
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
   width: 100%;
 }
 
 .buy {
-  height: clamp(25px,75%, 60px);
   background-color: var(--accent-color);
   width: min(100px, 35%);
   color: var(--text-color-light);
-  margin: var(--margin) 0;
+  margin-bottom: var(--margin);
+  height: 1.8em;
+}
+
+.buy.explore {
+  width: 100%;
 }
 
 .price {
-  height: clamp(25px,75%, 60px);
-  font-size: auto;
   color: var(--text-color-dark);
   padding: var(--padding);
   margin-left: auto;
+  font-size: 0.8em;
+}
+
+.price p {
+  margin: 0px;
 }
