--- a/component/ProductList-type1/style.module.css
+++ b/component/ProductList-type1/style.module.css
@@ -1,10 +1,19 @@
 .container {
-  -ms-grid-columns: (minmax(120px, 1fr))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+  -ms-grid-columns: (minmax(250px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   background-color: white;
   display: -ms-grid;
   display: grid;
   overflow: hidden;
   gap: var(--box-gap);
-  padding: var(--box-gap);
+  padding: calc(var(--box-gap)/2);
+}
+
+@media (max-width: 570px) {
+  .container.find {
+    -ms-grid-columns: (minmax(48%, 1fr))[auto-fill];
+        grid-template-columns: repeat(auto-fill, minmax(48%, 1fr));
+    padding: 0;
+    gap: 2px;
+  }
 }
