--- a/component/ProductList-type1/style.module.scss
+++ b/component/ProductList-type1/style.module.scss
@@ -1,9 +1,17 @@
 .container {
-  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   background-color: rgb(255, 255, 255);
   display: grid;
   overflow: hidden;
   gap: var(--box-gap);
-  padding: var(--box-gap);
+  padding: calc(var(--box-gap)/2);
 }
 
+
+@media (max-width: 570px) {
+  .container.find{
+    grid-template-columns: unquote("repeat(auto-fill, minmax(48%, 1fr))");
+    padding: 0;
+    gap: 2px;
+  }
+}
