--- a/component/Layout/NavBar/style.module.scss
+++ b/component/Layout/NavBar/style.module.scss
@@ -12,8 +12,7 @@
     z-index: 2;
     top: 0;
     left: 0;
-    height: var(--navigation-height);
-    background-color: var(--body-neutral-light);
+    background-color: var(--body-background);
 }
 .annoncement{
     background-color: var(--theme-color);
