--- a/component/ProductList-flex/style.module.scss
+++ b/component/ProductList-flex/style.module.scss
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   overflow: auto;
+  scroll-snap-type: x mandatory;
   &::-webkit-scrollbar-track {
     background-color: #f5f5f5;
   }
