--- a/component/ProductCard/style.module.css
+++ b/component/ProductCard/style.module.css
@@ -1,27 +1,18 @@
-.cardsContainer1 {
+.cardsContainer {
   width: 100%;
 }
 
-.cardsContainer2 {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  max-width: 300px;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: calc(var(--box-gap)/2);
+.cardsContainer.no-parent-restiction {
+  width: min(100%,360px);
+  scroll-snap-align: start;
+  padding: var(--margin);
 }
 
 .cards {
   position: relative;
   z-index: 0;
   width: 100%;
-  margin: var(--margin) 0;
+  margin-top: var(--margin);
   max-width: calc(50px + var(--max-card-height) * 100 / var(--aspect-ratio));
   padding-top: min(var(--max-card-height), calc(var(--aspect-ratio))*1%);
 }
@@ -44,8 +35,8 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%) scale(1.1);
-          transform: translate(-50%, -50%) scale(1.1);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   -webkit-transition: -webkit-transform var(--fast-animation-duration) ease-in-out;
   transition: -webkit-transform var(--fast-animation-duration) ease-in-out;
   transition: transform var(--fast-animation-duration) ease-in-out;
@@ -55,9 +46,27 @@
 /****************************description**************************************/
 .description {
   height: calc(100% - var(--image-percentage));
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
+  margin-left: calc(var(--margin)/2);
   width: 100%;
+}
+
+.description.no-parent-restiction {
+  margin: 0px;
+}
+
+.price {
+  color: var(--text-color-dark);
+  padding: 0.3em 1px;
+  font-size: var(--small-font-size);
+}
+
+.price p {
+  margin: 0px;
+  line-height: 1em;
+}
+
+.price.no-parent-restiction {
+  display: none;
 }
 
 .buy {
@@ -68,17 +77,6 @@
   height: 1.8em;
 }
 
-.buy.explore {
-  width: 100%;
-}
-
-.price {
-  color: var(--text-color-dark);
-  padding: var(--padding);
-  margin-left: auto;
-  font-size: 0.8em;
-}
-
-.price p {
-  margin: 0px;
+.buy.no-parent-restiction {
+  margin-top: var(--margin);
 }
