--- a/component/ProductCard/style.module.scss
+++ b/component/ProductCard/style.module.scss
@@ -1,21 +1,19 @@
-.cardsContainer1 {
+
+
+.cardsContainer {
   width: 100%;
 }
-
-.cardsContainer2 {
-  width: 100%;
-  display: flex;
-  max-width: 300px;
-  align-items: center;
-  justify-content: center;
-  margin: calc(var(--box-gap)/2);
+.cardsContainer.no-parent-restiction{
+  width: unquote("min(100%,360px)");
+  scroll-snap-align: start;
+  padding: var(--margin);
 }
 
 .cards {
   position: relative;
   z-index: 0;
   width: 100%;
-  margin: var(--margin) 0;
+  margin-top: var(--margin);
   max-width: unquote("calc(50px + var(--max-card-height) * 100 / var(--aspect-ratio))"); //Uncommenting this property will force the card to maintain it's aspect ratio even if more
   padding-top: unquote("min(var(--max-card-height), calc(var(--aspect-ratio))*1%)");
 }
@@ -37,7 +35,7 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(1.1);
+    transform: translate(-50%, -50%);
     transition: transform var(--fast-animation-duration) ease-in-out;
   }
 }
@@ -45,27 +43,37 @@
 /****************************description**************************************/
 .description {
   height: calc(100% - var(--image-percentage));
-  flex-wrap: nowrap;
+  margin-left: calc(var(--margin)/2);
   width: 100%;
 }
 
+.description.no-parent-restiction{
+  margin: 0px;
+}
+
+.price {
+  color: var(--text-color-dark);
+  padding: 0.3em 1px;
+
+  font-size: var(--small-font-size);
+  p{
+    margin: 0px;
+    line-height: 1em;
+  }
+  &.no-parent-restiction{
+    display: none;
+  }
+}
 .buy {
   background-color: var(--accent-color);
   width: unquote("min(100px, 35%)");
   color: var(--text-color-light);
   margin-bottom: var(--margin);
   height: 1.8em;
-  &.explore{
-    width: 100%;
-  }
 }
 
-.price {
-  color: var(--text-color-dark);
-  padding: var(--padding);
-  margin-left: auto;
-  font-size: 0.8em;
-  p{
-    margin: 0px;
-  }
+.buy.no-parent-restiction{
+  margin-top: var(--margin)
+
 }
+
