--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,7 +1,7 @@
 :root {
   --border: 2px;
   --thin-border: 1px;
-  --border-radius: 2px;
+  --border-radius: 15px;
   --margin: 5px;
   --large-margin: 8px;
   --larger-margin: 50px;
@@ -18,8 +18,9 @@
   --page-max-width: 1200px;
   --larger-font-size: 2em;
   --large-font-size: 1.2em;
+  --small-font-size: 0.8em;
   --medium-font-size: 0.8em;
-  --animation-duration: 0.5s;
+  --animation-duration: 0.2s;
   --fast-animation-duration: 0.1s;
 
   /////////cards///////////////
@@ -71,6 +72,10 @@ button{
   padding: 0;
   cursor: pointer;
 
+}
+
+img{
+  max-height: 100%;
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Manrope&display=swap");
