The next step is to add and make the filters functionals

--- a/component/Layout/NavBar/NavSide/style.module.css
+++ b/component/Layout/NavBar/NavSide/style.module.css
@@ -1,11 +1,13 @@
 .sideBar {
   background-color: var(--theme-color);
   width: min(25em, 85vw);
+  -webkit-transform: translateX(-100%);
+          transform: translateX(-100%);
   position: fixed;
   overflow-y: auto;
   height: 100vh;
   top: 0;
-  left: -100%;
+  left: 0;
   -webkit-transition: -webkit-transform var(--animation-duration) ease-in-out;
   transition: -webkit-transform var(--animation-duration) ease-in-out;
   transition: transform var(--animation-duration) ease-in-out;
@@ -13,8 +15,8 @@
 }
 
 .sideBar.open {
-  -webkit-transform: translateX(100%);
-          transform: translateX(100%);
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 
 .overlay {
