I made the sidebar filter syncronuous with for that is in the navSide, However theres is a bug with the sidebar that is asyncronuous with the state

--- a/component/ActiveFilters/style.module.css
+++ b/component/ActiveFilters/style.module.css
@@ -50,6 +50,12 @@
   background-color: var(--theme-color);
 }
 
+.crossContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .cross {
   width: 15px;
   height: 2px;
