--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,6 @@
 :root {
   --border: 2px;
-  --thin-border: 1px;
+  --thin-border: 1.5px;
   --border-radius: 15px;
   --margin: 5px;
   --large-margin: 8px;
@@ -21,7 +21,7 @@
   --small-font-size: 0.8em;
   --medium-font-size: 0.8em;
   --animation-duration: 0.4s;
-  --fast-animation-duration: 0.1s;
+  --fast-animation-duration: 0.2s;
 
   /////////cards///////////////
   --box-gap: 10px;
@@ -44,6 +44,9 @@ body {
   height: 100%;
   width: 100%;
   overflow: hidden;
+  & > div{
+    overflow: auto;
+  }
 }
 
 h1{
@@ -85,7 +88,6 @@ img{
   width: 100%;
   font-size: 1em;
   background-color: var(--body-background);
-  overflow-y: auto;
   font-family: "Manrope", sans-serif;
   color: var(--text-color-dark);
 }
@@ -161,6 +163,13 @@ img{
   }
 }
 
+.find_overflow{
+  overflow: hidden;
+}
+
+.navBar_overflow{
+  overflow: hidden;
+}
 ///////////////////////////////////////////////////////////////////////////
 
 .blue {
