--- a/component/FilterOverlay/style.module.css
+++ b/component/FilterOverlay/style.module.css
@@ -1,7 +1,16 @@
 .filterContainer {
-  position: absolute;
+  --individualFilterHeight: 15px;
+  border-left: var(--border) solid var(--theme-color);
   background-color: var(--body-neutral-light);
-  z-index: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  z-index: 2;
   top: 0;
   left: 0;
   width: 100%;
@@ -50,4 +59,11 @@
 .cross::before {
   -webkit-transform: rotateZ(-45deg);
           transform: rotateZ(-45deg);
+}
+
+/*******************************FilterRubriqueContainer**********************/
+.filterRubriqueContainer {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
