--- a/component/ActiveFilters/style.module.scss
+++ b/component/ActiveFilters/style.module.scss
@@ -1,12 +1,19 @@
 .container {
-  padding-top: var(--large-padding);
+  margin-top: var(--large-padding);
+}
+
+.filterHeader {
+  justify-content: space-between;
+  align-items: flex-start;
+  margin: 0 var(--margin);
+  display: flex;
 }
 
 .filterContainer {
   display: flex;
   overflow: auto;
-  height: 33px;
-  min-width: 1px;
+  // height: 40px;
+  flex-shrink: 0;
   &::-webkit-scrollbar-track {
     background-color: #c7aeae;
   }
@@ -26,17 +33,17 @@
   width: fit-content;
   padding: var(--padding);
   padding-right: 0;
-  margin-left: var(--margin);
-  img{
+  img {
     margin: var(--margin);
     max-height: none;
-    height:110%;
+    height: 110%;
   }
 }
 /********************************************filter styles***********************************/
 
 .filter {
   padding: 2px 2px 2px 9px;
+  flex-shrink: 0;
   align-self: flex-start;
   border-radius: var(--border-radius);
 
@@ -45,7 +52,6 @@
   font-size: var(--small-font-size);
   background-color: var(--theme-color);
 }
-
 
 .crossContainer {
   display: flex;
