--- a/component/Layout/Footer/style.module.css
+++ b/component/Layout/Footer/style.module.css
@@ -1,1 +1,78 @@
-/* No CSS */
+.footerContainer {
+  border-top: var(--border) solid var(--accent-color);
+  background-color: var(--theme-color);
+  color: var(--accent-color);
+}
+
+.footerHeader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.brandName {
+  font-size: 2em;
+  padding: 10px 25px;
+}
+
+.Icons {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (50px)[4];
+      grid-template-columns: repeat(4, 50px);
+}
+
+.Icons img {
+  width: 100%;
+}
+
+.footerBody {
+  margin-top: var(--larger-margin);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.footerBody li {
+  list-style: none;
+}
+
+.footerBody li:nth-child(1) {
+  position: relative;
+  display: inline-block;
+  margin: var(--large-margin);
+}
+
+.footerBody li:nth-child(1):after {
+  position: absolute;
+  content: "";
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--accent-color);
+}
+
+.footerLink {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.footerBottom {
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: var(--larger-margin);
+}
