--- a/component/Layout/NavBar/NavSide/style.module.scss
+++ b/component/Layout/NavBar/NavSide/style.module.scss
@@ -14,6 +14,7 @@
   }
 }
 
+
 .overlay {
   background-color: hsla(0, 0%, 0%, 0.871);
   pointer-events: none;
@@ -27,6 +28,12 @@
   &.open {
     opacity: 1;
     pointer-events: auto;
+  }
+}
+
+@media (min-width: 750px ){
+  .sideBar, .overlay{
+    display: none;
   }
 }
 
