--- a/component/ProductList-grid/style.module.css
+++ b/component/ProductList-grid/style.module.css
@@ -10,7 +10,7 @@
 }
 
 @media (max-width: 570px) {
-  .container.find {
+  .container.double {
     -ms-grid-columns: (minmax(48%, 1fr))[auto-fill];
         grid-template-columns: repeat(auto-fill, minmax(48%, 1fr));
     padding: 0;
