--- a/component/Layout/Footer/style.module.scss
+++ b/component/Layout/Footer/style.module.scss
@@ -8,7 +8,7 @@
   //   var(--accent-color) 50%,
   //   var(--accent-color) 100%
   // );
-  color: var(--accent-color);
+  color: white;
 }
 
 .footerHeader {
@@ -59,6 +59,7 @@
 }
 
 .footerBottom{
+  
     justify-content: space-between;
-    padding: var(--larger-margin);
+    padding: var(--large-margin);
 }
