--- a/component/Layout/NavBar/style.module.css
+++ b/component/Layout/NavBar/style.module.css
@@ -10,6 +10,10 @@
   z-index: 2;
   top: 0;
   left: 0;
+  -webkit-transition: opacity 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+  transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, -webkit-transform 0.5s ease-in-out;
   background-color: var(--body-background);
 }
 
@@ -18,4 +22,10 @@
   color: var(--text-color-light);
   text-align: center;
   font-size: 0.8em;
+}
+
+.hidden {
+  opacity: 0;
+  -webkit-transform: translateY(-150%);
+          transform: translateY(-150%);
 }
