--- a/component/ProductList-grid/style.module.scss
+++ b/component/ProductList-grid/style.module.scss
@@ -11,7 +11,7 @@
 @media (max-width: 570px) {
   .container.double{
     grid-template-columns: unquote("repeat(auto-fill, minmax(48%, 1fr))");
-    padding: 0;
+    padding: 0px;
     gap: 2px;
   }
 }
